fix logo too big

--- a/index.css
+++ b/index.css
@@ -260,7 +260,7 @@ section {
 }
 
 .partner-logo {
-  height: 6rem;
+  height: 5rem;
 }
 
 .accordion {
